tests/cases/partialeq-fail.stderr
error[E0369]: binary operation `==` cannot be applied to type `TestPEqStruct<NotPartialEq>`
  --> tests/cases/partialeq-fail.rs:16:1
   |
16 | #[autoprops_component]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
note: an implementation of `PartialEq` might be missing for `NotPartialEq`
  --> tests/cases/partialeq-fail.rs:14:1
   |
14 | struct NotPartialEq();
   | ^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NotPartialEq` with `#[derive(PartialEq)]`
   |
14 | #[derive(PartialEq)]
   |
